--- a/src/show_result/CMakeLists.txt
+++ b/src/show_result/CMakeLists.txt
@@ -1,16 +1,21 @@
-project(process)
+project(show_result)
 
 add_library(${PROJECT_NAME}
 SHARED
-planprocess.cpp
+show_result.cpp
 )
 
 target_include_directories(${PROJECT_NAME}
 PUBLIC
-${PNC_Map_Dir}
+${Process_Dir}
 )
 
 target_link_libraries(${PROJECT_NAME}
 PUBLIC
-pnc_map
+process
+)
+
+target_link_libraries(${PROJECT_NAME}
+PUBLIC
+easyx
 )
