--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,15 @@ set(Process_Dir ${CMAKE_SOURCE_DIR}/src/process)
 set(PNC_Map_Dir ${CMAKE_SOURCE_DIR}/src/pnc_map)
 set(Show_Result_Dir ${CMAKE_SOURCE_DIR}/src/show_result)
 
+#third party lib
+set(EIGEN3_INCLUDE_DIR "C:/Program Files/eigen-3.4.0")
+list(APPEND CMAKE_MODULE_PATH "${EIGEN3_INCLUDE_DIR}/cmake")
+message("CMAKE_MODULE_PATH = ${CMAKE_MODULE_PATH}")
+
+find_package(Eigen3 3.4 REQUIRED)
+if(TARGET Eigen3::Eigen)
+    message(STATUS "******** Eigen3 3.4 found in ${EIGEN3_INCLUDE_DIR} *******")
+endif()
+
 #add sub directory
 add_subdirectory(src)
